# syslog-ng-3.5

./: Makefile.am  configure.ac
lib/: Makefile.am  apphook.c  cfg-grammar.y  cfg.c  cfg.h  gprocess.c  host-resolve.c  hostname-win32.c  hostname.c  logmatcher.c  logmatcher.h  logsource.c  logwriter.c  mainloop.c  misc.c  misc.h  persist-state.c  persist-state.h  reloc.c  reloc.h  timeutils.c
lib/filter/: filter-cmp.c  filter-expr-grammar.ym  filter-re.c  filter-re.h
lib/filter/tests/: test_filters.c
lib/rewrite/: rewrite-expr-grammar.ym  rewrite-subst.c  rewrite-subst.h
lib/tests/: Makefile.am  test_cache.c  test_host_resolve.c  test_hostname.c  test_reloc.c
modules/afsocket/: afinet-dest.c
modules/dbparser/: dbparser.c
modules/dbparser/pdbtool/: pdbtool.c
persist-tool/: Makefile.am  add.c  add.h  dump.c  dump.h  generate-agent.c  generate-agent.h  generate.c  generate.h  persist-tool.c
syslog-ng/: main.c  syslog-ng-ctl.c
tests/unit/: test_persist_state.c
